--- a/MyContactList/Info.plist
+++ b/MyContactList/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your Photos!</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need to access the camera!</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We need to know where we&apos;re at!</string>
 	<key>UIApplicationSceneManifest</key>
